feat: Refactor CLI to ZicoUI and update component management
- Rename CLI tool from ZUI to ZicoUI
- Update package.json and bun.lock to include zicoui as a dependency
- Remove obsolete zui-components.json configuration file
- Modify commands to reflect new CLI name and configuration file
- Enhance user prompts and feedback for initialization and component addition

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "zicoui": "file:./cli",
     "@content-collections/core": "^0.9.1",
     "@content-collections/mdx": "^0.2.2",
     "@content-collections/next": "^0.2.6",
