--- a/cli/package.json
+++ b/cli/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "zui",
-  "version": "0.1.0",
+  "name": "zicoui",
+  "version": "0.1.1",
   "type": "module",
   "main": "dist/index.js",
   "bin": {
-    "zui": "dist/index.js"
+    "zicoui": "dist/index.js"
   },
   "scripts": {
     "build": "bun build src/index.ts --outdir dist --target node",
